objects/Blog_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_Tags__c</fullName>
        <label>Blog Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <defaultValue>&quot;Uncategorized&quot;</defaultValue>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Copy__c</fullName>
        <label>Lead Copy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Page_Hits__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Page Hits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publish_Text__c</fullName>
        <label>Publish_Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <label>Published</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Title_Author__c</fullName>
        <formula>Title__c &amp; &apos; (&apos; &amp;  Author__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report_Title_Author</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEO_Title__c</fullName>
        <label>SEO Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_1__c</fullName>
        <label>Tag 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_2__c</fullName>
        <label>Tag 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_3__c</fullName>
        <label>Tag 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wordpress__c</fullName>
        <formula>HYPERLINK(&apos;http://blogs.developerforce.com/developer-relations/&apos;&amp;TEXT(YEAR(Published__c))&amp;&apos;/&apos;&amp;TEXT(MONTH(Published__c))&amp;&apos;/&apos;&amp;SEO_Title__c &amp;&apos;.html&apos;, Title__c, &apos;_blog&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Wordpress Link</label>
        <type>Text</type>
    </fields>
    <label>Blog Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Published__c</columns>
        <columns>Page_Hits__c</columns>
        <columns>Title__c</columns>
        <columns>Author__c</columns>
        <columns>Category__c</columns>
        <columns>Tag_1__c</columns>
        <columns>Tag_2__c</columns>
        <columns>Tag_3__c</columns>
        <columns>Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>Blog Entries</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Author_Coenraets</fullName>
        <columns>NAME</columns>
        <columns>Author__c</columns>
        <columns>Title__c</columns>
        <columns>Published__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Author__c</field>
            <operation>contains</operation>
            <value>coenraets</value>
        </filters>
        <label>Author - Coenraets</label>
    </listViews>
    <listViews>
        <fullName>Blogs_With_Links</fullName>
        <columns>NAME</columns>
        <columns>Published__c</columns>
        <columns>Category__c</columns>
        <columns>Title__c</columns>
        <columns>Wordpress__c</columns>
        <columns>Author__c</columns>
        <columns>Tag_1__c</columns>
        <columns>Tag_2__c</columns>
        <columns>Tag_3__c</columns>
        <filterScope>Everything</filterScope>
        <label>Blogs With Links</label>
    </listViews>
    <nameField>
        <displayFormat>BE-{0000}</displayFormat>
        <label>REFID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blog Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>